--- a/packages/ace-code-editorjs/package.json
+++ b/packages/ace-code-editorjs/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ace-code-editorjs",
   "private": false,
-  "version": "0.0.1",
+  "license": "MIT",
+  "version": "1.0.0",
   "type": "module",
   "files": [
     "dist"
