--- a/sites/ace-code-editorjs-site/package.json
+++ b/sites/ace-code-editorjs-site/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ace-code-editorjs-site",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
