--- a/packages/ace-code-editorjs/package.json
+++ b/packages/ace-code-editorjs/package.json
@@ -2,7 +2,7 @@
   "name": "ace-code-editorjs",
   "private": false,
   "license": "MIT",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "files": [
     "dist"
@@ -35,12 +35,12 @@
     "prepublish": "tsc && vite build"
   },
   "devDependencies": {
-    "@editorjs/editorjs": "^2.28.2",
-    "@types/node": "^20.8.7",
-    "ace-builds": "^1.30.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.0"
+    "@editorjs/editorjs": "^2.29.1",
+    "@types/node": "^20.14.9",
+    "ace-builds": "^1.35.1",
+    "typescript": "^5.5.2",
+    "vite": "^4.5.3",
+    "vite-plugin-dts": "^3.9.1"
   },
   "peerDependencies": {
     "@editorjs/editorjs": "^2.27.2",
@@ -54,5 +54,6 @@
     "ace-code-editor",
     "editorjs-code",
     "editorjs-block"
-  ]
+  ],
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
